--- a/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
+++ b/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
@@ -54,6 +54,8 @@
     <Compile Include="Helpers\DeepLinkParser\CollectionFormingDeepLinkParser.cs" />
     <Compile Include="Helpers\BackgroundTaskHelper.cs" />
     <Compile Include="Helpers\ColorHelper.cs" />
+    <Compile Include="Helpers\MultiInstanceHelper\MultiInstanceHelper.cs" />
+    <Compile Include="Helpers\MultiInstanceHelper\ViewLifetimeControl.cs" />
     <Compile Include="Helpers\Network\ConnectionHelper.cs" />
     <Compile Include="Helpers\Network\ConnectionInformation.cs" />
     <Compile Include="Helpers\Network\ConnectionType.cs" />
